  * Change obsolete MAILMAN_OWNER to MAILMAN_SITE_LIST, note that this
    invalidate #232273 and #232452 (by GCS, closes: #235913)
  * Add debconf question for languages supported at a site reducing space
    required in /etc and chattyness (bsb, closes: #232005).
  * Backed out hack in 05_config_list_member_options.dpatch since it
    breaks config_list in mm 2.1.4 (bsb, closes: #231967).

 -- Siggy Brentrup <bsb@debian.org>  Tue, 23 Mar 2004 12:30:01 +0100

mailman (2.1.4-1) unstable; urgency=medium

  * New upstream release (closes: #227968, #228212)
  * Try handling empty files in queue a little more gracefully 
    (closes: #223906)
  * Actually move the pid file and fix logrotate script a bit more
    (closes: #223525, #228060)
  * Update Depends to exim4 | mail-transport-agent (closes: #228587)
  * Update Japanese debconf translation (closes: #227137)
  * Update French debconf translation (closes: #227246)
  * Get rid of the gate_news debconf stuff, since Mailman 2.1 doesn't use
    gate_news any more.  Also comment out any occurences of gate_news in
    mailman's crontab.  (also invalidates #186320 (Closes: #186320))
  * Give some feedback on what's happening during postinst, since ucf is
    so goddamn slow (closes: #211815)
  * Work around ucf/debconf interaction (closes: #225667)

 -- Tollef Fog Heen <tfheen@debian.org>  Fri, 30 Jan 2004 12:12:17 +0100

mailman (2.1.3-2) unstable; urgency=low

  * Fix reference to /usr/lib/mailman/cgi-bin in README.Debian. Also fix
    so that the link in /usr/lib/mailman/cgi-bin points to the right place
    (closes: #218138, #202464)
  * Fix bug in scrubber.py with empty charsets (closes: #212643).  Thanks
    to Md for this one :)
  * Make the password field be focused on page entry, if you have JS
    enabled.  Again thanks to Md.
  * Fix bashism in postinst.
  * Document apache's default setting of SymlinksIfOwnerMatch, since this
    breaks mailman if you change from public to private to public